crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D200_D200.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D200 One-line docstring should fit on one line
 --> D200.py:2:5
  |
1 |   def func():
2 | /     """\
3 | |     """
  | |_______^
help: Reformat to one line

D200 [*] One-line docstring should fit on one line
 --> D200.py:7:5
  |
6 |   def func():
7 | /     """\\
8 | |     """
  | |_______^
help: Reformat to one line
  |
7 -     """\\
8 -     """
7 +     """\\"""
  |
note: This is an unsafe fix and may change runtime behavior

D200 One-line docstring should fit on one line
  --> D200.py:12:5
   |
11 |   def func():
12 | /     """\ \
13 | |     """
   | |_______^
help: Reformat to one line
