crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D205_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D205 1 blank line required between summary line and description
   --> D.py:200:5
    |
198 |   @expect('D213: Multi-line docstring summary should start at the second line')
199 |   def multi_line_zero_separating_blanks():
200 | /     """Summary.
201 | |     Description.
202 | |
203 | |     """
    | |_______^
help: Insert single blank line

D205 [*] 1 blank line required between summary line and description (found 2)
   --> D.py:210:5
    |
208 |   @expect('D213: Multi-line docstring summary should start at the second line')
209 |   def multi_line_two_separating_blanks():
210 | /     """Summary.
211 | |
212 | |
213 | |     Description.
214 | |
215 | |     """
    | |_______^
help: Insert single blank line
211 - 
212 - 
    |
