crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D207_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D207 [*] Docstring is under-indented
   --> D.py:232:1
    |
230 |     """Summary.
231 |
232 | Description.
    | ^
233 |
234 |     """
    |
help: Increase indentation
    |
232 |     Description.
    | ++++

D207 [*] Docstring is under-indented
   --> D.py:244:1
    |
242 |     Description.
243 |
244 | """
    | ^
help: Increase indentation
    |
244 |     """
    | ++++

D207 [*] Docstring is under-indented
   --> D.py:440:1
    |
438 | def docstring_start_in_same_line(): """First Line.
439 |
440 |     Second Line
    | ^
441 |     """
    |
help: Increase indentation
    |
440 |                                     Second Line
    |     ++++++++++++++++++++++++++++++++

D207 [*] Docstring is under-indented
   --> D.py:441:1
    |
440 |     Second Line
441 |     """
    | ^
help: Increase indentation
    |
441 |                                     """
    |     ++++++++++++++++++++++++++++++++
