crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D208_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D208 [*] Docstring is over-indented
   --> D.py:252:1
    |
250 |     """Summary.
251 |
252 |        Description.
    | ^
253 |
254 |     """
    |
help: Remove over-indentation
    |
252 |     Description.
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:264:1
    |
262 |     Description.
263 |
264 |         """
    | ^
help: Remove over-indentation
    |
264 |     """
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:272:1
    |
270 |     """Summary.
271 |
272 |         Description.
    | ^
273 |
274 |     """
    |
help: Remove over-indentation
    |
272 |     Description.
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:673:1
    |
671 |     """Summary.
672 |
673 |         This is overindented
    | ^
674 |             And so is this, but it we should preserve the extra space on this line relative
675 |             to the one before
    |
help: Remove over-indentation
    |
673 |     This is overindented
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:674:1
    |
673 |         This is overindented
674 |             And so is this, but it we should preserve the extra space on this line relative
    | ^
675 |             to the one before
676 |     """
    |
help: Remove over-indentation
    |
674 |         And so is this, but it we should preserve the extra space on this line relative
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:675:1
    |
673 |         This is overindented
674 |             And so is this, but it we should preserve the extra space on this line relative
675 |             to the one before
    | ^
676 |     """
    |
help: Remove over-indentation
    |
675 |         to the one before
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:682:1
    |
680 |     """Summary.
681 |
682 |         This is overindented
    | ^
683 |             And so is this, but it we should preserve the extra space on this line relative
684 |             to the one before
    |
help: Remove over-indentation
    |
682 |     This is overindented
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:683:1
    |
682 |         This is overindented
683 |             And so is this, but it we should preserve the extra space on this line relative
    | ^
684 |             to the one before
685 |         This is also overindented
    |
help: Remove over-indentation
    |
683 |         And so is this, but it we should preserve the extra space on this line relative
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:684:1
    |
682 |         This is overindented
683 |             And so is this, but it we should preserve the extra space on this line relative
684 |             to the one before
    | ^
685 |         This is also overindented
686 |             And so is this, but it we should preserve the extra space on this line relative
    |
help: Remove over-indentation
    |
684 |         to the one before
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:685:1
    |
683 |             And so is this, but it we should preserve the extra space on this line relative
684 |             to the one before
685 |         This is also overindented
    | ^
686 |             And so is this, but it we should preserve the extra space on this line relative
687 |             to the one before
    |
help: Remove over-indentation
    |
685 |     This is also overindented
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:686:1
    |
684 |             to the one before
685 |         This is also overindented
686 |             And so is this, but it we should preserve the extra space on this line relative
    | ^
687 |             to the one before
688 |     """
    |
help: Remove over-indentation
    |
686 |         And so is this, but it we should preserve the extra space on this line relative
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:687:1
    |
685 |         This is also overindented
686 |             And so is this, but it we should preserve the extra space on this line relative
687 |             to the one before
    | ^
688 |     """
    |
help: Remove over-indentation
    |
687 |         to the one before
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:695:1
    |
693 |     """Summary.
694 |
695 |         This is overindented
    | ^
696 |             And so is this, but it we should preserve the extra space on this line relative
697 |             to the one before
    |
help: Remove over-indentation
    |
695 |     This is overindented
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:696:1
    |
695 |         This is overindented
696 |             And so is this, but it we should preserve the extra space on this line relative
    | ^
697 |             to the one before
698 |                 And the relative indent here should be preserved too
    |
help: Remove over-indentation
    |
696 |         And so is this, but it we should preserve the extra space on this line relative
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:697:1
    |
695 |         This is overindented
696 |             And so is this, but it we should preserve the extra space on this line relative
697 |             to the one before
    | ^
698 |                 And the relative indent here should be preserved too
699 |     """
    |
help: Remove over-indentation
    |
697 |         to the one before
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:698:1
    |
696 |             And so is this, but it we should preserve the extra space on this line relative
697 |             to the one before
698 |                 And the relative indent here should be preserved too
    | ^
699 |     """
    |
help: Remove over-indentation
    |
698 |             And the relative indent here should be preserved too
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:704:1
    |
702 |     """Summary.
703 |
704 |         This is overindented
    | ^
705 |             And so is this, but it we should preserve the extra space on this line relative
706 |         This is overindented
    |
help: Remove over-indentation
    |
704 |     This is overindented
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:705:1
    |
704 |         This is overindented
705 |             And so is this, but it we should preserve the extra space on this line relative
    | ^
706 |         This is overindented
707 |         This is overindented
    |
help: Remove over-indentation
    |
705 |         And so is this, but it we should preserve the extra space on this line relative
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:706:1
    |
704 |         This is overindented
705 |             And so is this, but it we should preserve the extra space on this line relative
706 |         This is overindented
    | ^
707 |         This is overindented
708 |     """
    |
help: Remove over-indentation
    |
706 |     This is overindented
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:707:1
    |
705 |             And so is this, but it we should preserve the extra space on this line relative
706 |         This is overindented
707 |         This is overindented
    | ^
708 |     """
    |
help: Remove over-indentation
    |
707 |     This is overindented
    | ++++

D208 [*] Docstring is over-indented
   --> D.py:723:1
    |
721 |     """There's a non-breaking space (2-bytes) after 3 spaces (https://github.com/astral-sh/ruff/issues/9080).
722 |
723 |        Returns:
    | ^
724 |     """
    |
help: Remove over-indentation
    |
723 |     Returns:
    | ++++
