crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D208_D208.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D208 [*] Docstring is over-indented
 --> D208.py:2:1
  |
1 | """
2 |    Author
  | ^
3 | """
  |
help: Remove over-indentation
  |
2 | Author
  |

D208 [*] Docstring is over-indented
  --> D208.py:8:1
   |
 6 | class Platform:
 7 |     """ Remove sampler
 8 |             Args:
   | ^
 9 |             Returns:
10 |             """
   |
help: Remove over-indentation
  |
8 |     Args:
  | ++++

D208 [*] Docstring is over-indented
  --> D208.py:9:1
   |
 7 |     """ Remove sampler
 8 |             Args:
 9 |             Returns:
   | ^
10 |             """
   |
help: Remove over-indentation
  |
9 |     Returns:
  | ++++

D208 [*] Docstring is over-indented
  --> D208.py:10:1
   |
 8 |             Args:
 9 |             Returns:
10 |             """
   | ^
help: Remove over-indentation
   |
10 |     """
   | ++++

D208 [*] Docstring is over-indented
  --> D208.py:24:1
   |
22 |     Args:
23 |     Returns:
24 |                 """
   | ^
help: Remove over-indentation
   |
24 |     """
   | ++++

D208 [*] Docstring is over-indented
  --> D208.py:29:1
   |
27 | class Platform:
28 |     """All lines are over indented including the last containing the closing quotes
29 |         Args:
   | ^
30 |         Returns:
31 |         """
   |
help: Remove over-indentation
   |
29 |     Args:
   | ++++

D208 [*] Docstring is over-indented
  --> D208.py:30:1
   |
28 |     """All lines are over indented including the last containing the closing quotes
29 |         Args:
30 |         Returns:
   | ^
31 |         """
   |
help: Remove over-indentation
   |
30 |     Returns:
   | ++++

D208 [*] Docstring is over-indented
  --> D208.py:31:1
   |
29 |         Args:
30 |         Returns:
31 |         """
   | ^
32 |
33 | class Platform:
   |
help: Remove over-indentation
   |
31 |     """
   | ++++

D208 [*] Docstring is over-indented
  --> D208.py:35:1
   |
33 | class Platform:
34 |     """All lines are over indented including the last
35 |         Args:
   | ^
36 |         Returns"""
   |
help: Remove over-indentation
   |
35 |     Args:
   | ++++

D208 [*] Docstring is over-indented
  --> D208.py:36:1
   |
34 |     """All lines are over indented including the last
35 |         Args:
36 |         Returns"""
   | ^
37 |
38 | # OK: This doesn't get flagged because it is accepted when the closing quotes are on a separate line  (see next test). Raises D209
   |
help: Remove over-indentation
   |
36 |     Returns"""
   | ++++
