crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D209_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D209 [*] Multi-line docstring closing quotes should be on a separate line
   --> D.py:281:5
    |
279 |   @expect('D213: Multi-line docstring summary should start at the second line')
280 |   def asdfljdf24():
281 | /     """Summary.
282 | |
283 | |     Description."""
    | |___________________^
help: Move closing quotes to new line
    |
283 ~     Description.
284 ~     """
    |

D209 [*] Multi-line docstring closing quotes should be on a separate line
   --> D.py:588:5
    |
586 |   @expect('D213: Multi-line docstring summary should start at the second line')
587 |   def asdfljdjgf24():
588 | /     """Summary.
589 | |
590 | |     Description.  """
    | |_____________________^
help: Move closing quotes to new line
    |
590 ~     Description.
591 ~     """
    |
