crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D211_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D211 [*] No blank lines allowed before class docstring
   --> D.py:170:5
    |
168 | class WithLeadingSpace:
169 |
170 |     """With leading space."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^
help: Remove blank line(s) before class docstring
169 - 
    |

D211 [*] No blank lines allowed before class docstring
   --> D.py:181:5
    |
179 | class TrailingSpace:
180 |
181 |     """TrailingSpace."""
    |     ^^^^^^^^^^^^^^^^^^^^
182 |     pass
    |
help: Remove blank line(s) before class docstring
180 - 
    |
